 19-May-2021  V1.673 Update dependencies in rcsb.utils.dictionary
 27-May-2021  V1.674 Update dependencies to rcsb.utils.dictionary
  2-Jun-2021  V1.675 Update dependencies to rcsb.utils.dictionary and diagnostic output
  3-Jun-2021  V1.676 Setting long description format to markdown - update pipeline config again
  5-Jun-2021  V1.677 Prune test cases
 10-Jun-2021  V1.679 Update dependencies to rcsb.utils.dictionary
 26-Jul-2021  V1.680 Update dependencies to rcsb.utils.dictionary, pipeline configuration, and example configuration
 27-Jul-2021  V1.681 Add support for provider exclusion filters to reduce test resource burden
 28-Jul-2021  V1.682 Adjustments for API extensions in DictMethodResourceProvider() and further culling of redundant unittests
 29-Jul-2021  V1.683 Adjustments for API extensions in RepoLoadWorkflow() and  dependency updates
  1-Aug-2021  V1.684 Add support for embedded iterables in json schema generation and support scanning obsolete entries.
  1-Aug-2021  V1.685 Adjust argument processing in RepoScanExec.py and update dependencies
  3-Aug-2021  V1.686 Update configuration example and dependencies
 25-Aug-2021  V1.687 Update dependencies
 26-Aug-2021  V1.688 Update dependencies
 28-Aug-2021  V1.689 Extend failure reporting for MongoDb PdbxLoader()
 28-Aug-2021  V1.690 Further adjustments in reporting for MongoDb PdbxLoader()
 10-Sep-2021  V1.691 Update dependencies for rcsb.utils.dictionary and rcsb.utils.io
 23-Sep-2021  V1.692 Simplify updates to RepoHoldingsDataPrep() for the update collection
 27-Sep-2021  V1.693 Add RepoHoldingsRemoteDataPrep and support for RepositoryProvider discoveryMode="remote"
 29-Sep-2021  V1.694 Make discovery mode an internal configuration property of RepositoryProvider()
  8-Oct-2021  V1.695 Pass configuration URLs to RepositoryHoldingsRemoteDataPrep() and
                     added support for building computed models schema
 16-Oct-2021  V1.696 Add validation and loading tests for computed models