@@ -156,7 +156,7 @@ class SchemaDataPrepValidateTests(unittest.TestCase):
             uId = fn.split("-")[1]
             h2 = uId[-2:]
             h1 = uId[-4:-2]
-            oPath = os.path.join(self.__cachePath, "AlphaFold", h1, h2, fn)
+            oPath = os.path.join(self.__cachePath, "computed-models", h1, h2, fn)
             fU.put(iPath, oPath)
 
     def testValidateOptsRepo(self):
