@@ -326,3 +326,4 @@
   8-Oct-2021  V1.695 Pass configuration URLs to RepositoryHoldingsRemoteDataPrep() and
                      added support for building computed models schema
  16-Oct-2021  V1.696 Add validation and loading tests for computed models
+ 17-Oct-2021  V1.697 Standardize path details for computed models
